# sinhala-history-scorer

./: .gitignore  README.md  main.py  pyproject.toml
core/: agents.py  ollama_client.py  ontology.py  rag.py  scoring_rules.py  sinhala_polish.py
data/: knowledge_base.txt  ontology.json  questions.json
